update nginx.conf MIN conf

--- a/front/index.html
+++ b/front/index.html
@@ -5,6 +5,6 @@
     <title>SP-Lutsk</title>
 </head>
 <body>
-<h1>Hello from Front_End :)) !!!</h1>
+<h1>It's Front_End :)) !!!</h1>
 </body>
 </html>
