--- a/front/index.html
+++ b/front/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SP-Lutsk</title>
-</head>
-<body>
-<h1>It's Front_End :)) !!!</h1>
-</body>
+<html lang="en" ng-app="myApp" ng-controller="MainController">
+    <head>
+        <meta charset="UTF-8">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
+        <link href="css/main.css" rel="stylesheet" />
+
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+
+        <title>{{ title }}</title>
+    </head>
+    <body>
+
+    <!-- Header -------------------------------------------------------------------------->
+        <div class="header">
+            <div class="container">
+                <h1 align="center">{{ title }}</h1>
+                <hr>
+            </div>
+        </div>
+
+    <!-- Body ---------------------------------------------------------------------------->
+        <div class="main">
+            <div class="container">
+                <h2>It's Front_End!<br>{{ team }}</h2>
+            </div>
+        </div>
+
+    <!-- Footer ------------------------------------------------------------------------->
+        <div class="footer">
+            <div class="container">
+                <hr>
+                <h3>{{ team | uppercase }} &copy 2018</h3>
+                <hr>
+            </div>
+        </div>
+
+    <!-- JS files loading ------------------->
+
+        <!-- Modules -->
+        <script src="js/app.js"></script>
+
+        <!-- Controllers -->
+        <script src="js/controllers/MainController.js"></script>
+
+        <!-- Services -->
+
+    </body>
 </html>
