--- a/front/index.html
+++ b/front/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="myApp" ng-controller="MainController">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/png" href="img/icon_team_16x16.png" />
         <link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
         <link href="css/main.css" rel="stylesheet" />
 
@@ -14,7 +15,7 @@
     <!-- Header -------------------------------------------------------------------------->
         <div class="header">
             <div class="container">
-                <h1 align="center">{{ title }}</h1>
+                <img src="img/organizer_logo.png">
                 <hr>
             </div>
         </div>
@@ -30,6 +31,8 @@
         <div class="footer">
             <div class="container">
                 <hr>
+                <img src="img/icon_team_150x150.png">
+                <br>
                 <h3>{{ team | uppercase }} &copy 2018</h3>
                 <hr>
             </div>
