--- a/front/index.html
+++ b/front/index.html
@@ -39,12 +39,12 @@
                 <hr>
             </div>
             <!-- Login ---------------->
-            <div> <!-- ng-app="" ng-controller="" -->
+            <div ng-app="" ng-controller="controllers">
                 <form name="form" ng-submit="login()" role="form">
                     <div class="form-group">
-                        <label for="email">Username</label>
+                        <label for="email">Email</label>
                         <input type="text" name="email" id="email" class="form-control" ng-model="email" required />
-                        <span ng-show="form.email.$dirty && form.email.$error.required" class="help-block">Username is required</span>
+                        <span ng-show="form.email.$dirty && form.email.$error.required" class="help-block">Email is required</span>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
