Add new locations in nginx.conf (/login, /about) && update index.html

--- a/front/index.html
+++ b/front/index.html
@@ -14,11 +14,10 @@
 
     </head>
     <body>
-
     <!-- Header -------------------------------------------------------------------------->
-        <header id="home" class="header">
+        <header class="header">
             <div class="container">
-                <a href="#home" class=""><img src="img/organizer_logo.png" alt="Logo"></a>
+                <a href="#" class=""><img src="img/organizer_logo.png" alt="Logo"></a>
             <!-- Main Menu Start -->
                 <ul class="">
                     <li><a href="/">HOME</a></li>
