Fixed bugs in index.html with ngRoute

--- a/front/index.html
+++ b/front/index.html
@@ -13,19 +13,19 @@
     <body>
     <!-- Header -------------------------------------------------------------------------->
         <header class="header">
-            <div class="{{active}}" ng-click="$event.preventDefault()">
+            <div>
                 <tr>
-                    <td><a href="/" class=""><img src="img/organizer_logo.png" alt="Logo"></a></td>
+                    <td><a href="#/!" class=""><img src="img/organizer_logo.png" alt="Logo"></a></td>
                 </tr>
                 <!-- Main Menu Start -->
                 <tr>
-                    <td><a href="/">Home</a></td>
+                    <td><a href="#/!">Home</a></td>
                 </tr>
                 <tr>
-                    <td><a href="/login">Login</a></td>
+                    <td><a href="#!login">Login</a></td>
                 </tr>
                 <tr>
-                    <td><a href="/about">About</a></td>
+                    <td><a href="#!about">About</a></td>
                 </tr>
                 <!-- Main Menu End -->
                 <hr>
