--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp" ng-controller="mainCtrl">
+<html lang="en" ng-app="myapp" ng-controller="myapp.mainCtrl">
     <head>
         <meta charset="UTF-8">
         <title>{{ title }}</title>
@@ -9,6 +9,10 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <!-- Font -->
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:500,300,700,400">
+        <!-- JS files loading ------------------->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
+        <script src="js/mainCtrl.js"></script>
     </head>
     <body>
     <!-- Header -------------------------------------------------------------------------->
@@ -51,13 +55,11 @@
                 </div>
             </div>
         </footer>
-<!-- JS files loading ------------------->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
+
     <!-- Modules -->
     <!--<script src="js/app.js"></script>-->
     <!-- Controllers -->
-    <script src="js/mainCtrl.js"></script>
+
     <!--<script src="js/loginCtrl.js"></script>-->
     <!-- Services -->
     </body>
