Updated js (main && login modules)

--- a/front/index.html
+++ b/front/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myapp" ng-controller="myapp.mainCtrl">
+<html lang="en" ng-app="app" ng-controller="homeCtrl as home">
     <head>
         <meta charset="UTF-8">
         <title>{{ title }}</title>
-        <!-- Favicon -->
+    <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
-        <!-- Main style sheet -->
+    <!-- Main style sheet -->
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <!-- Font -->
+    <!-- Font -->
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:500,300,700,400">
-        <!-- JS files loading ------------------->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
-        <script src="js/mainCtrl.js"></script>
+    <!-- JS files loading ------------------->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
+    <!-- Modules -->
+        <script src="js/app.js"></script><!-- js/mainCtrl_old.js -->
+    <!-- Controllers -->
+        <script src="js/controllers/homeCtrl.js"></script>
+        <script src="js/controllers/loginCtrl.js"></script>
+        <script src="js/controllers/aboutCtrl.js"></script>
+    <!-- Services -->
+        <script src="js/services/loginService.js"></script>
+    <!-- Factories -->
+        <script src="js/factories/loginFactory.js"></script>
     </head>
     <body>
     <!-- Header -------------------------------------------------------------------------->
@@ -23,13 +33,13 @@
                 </tr>
                 <!-- Main Menu Start -->
                 <tr>
-                    <td><a href="#!">Home</a></td>
+                    <td><a href="#!">| Home |</a></td>
                 </tr>
                 <tr>
-                    <td><a href="#!login">Login</a></td>
+                    <td><a href="#!login"> Login |</a></td>
                 </tr>
                 <tr>
-                    <td><a href="#!about">About</a></td>
+                    <td><a href="#!about"> About |</a></td>
                 </tr>
                 <!-- Main Menu End -->
                 <hr>
@@ -38,11 +48,11 @@
     <!-- Body ---------------------------------------------------------------------------->
         <div class="main">
             <div class="container">
-                <h2 align="center">{{ team }} </h2>
-                <h5 align="center">Now date && time: {{ today | date:'dd/MM/yyyy - HH:mm'}}</h5>
+                <h2 align="center">{{ team }}</h2>
+                <h5 align="center">Date && time loading page: {{ today | date:'dd/MM/yyyy - HH:mm:ss'}}</h5>
             </div>
     <!-- ng-view ------------------------------------------------------------------------>
-            <ng-view></ng-view>
+            <div class="ng-view"></div>
         </div>
     <!-- Footer ------------------------------------------------------------------------->
         <footer>
@@ -55,12 +65,5 @@
                 </div>
             </div>
         </footer>
-
-    <!-- Modules -->
-    <!--<script src="js/app.js"></script>-->
-    <!-- Controllers -->
-
-    <!--<script src="js/loginCtrl.js"></script>-->
-    <!-- Services -->
     </body>
 </html>
