--- a/front/index.html
+++ b/front/index.html
@@ -23,6 +23,8 @@
         <script src="js/services/loginService.js"></script>
     <!-- Factories -->
         <script src="js/factories/loginFactory.js"></script>
+    <!-- Factories -->
+        <script src="js/routeConfig.js"></script>
     </head>
     <body>
     <!-- Header -------------------------------------------------------------------------->
