--- a/front/index.html
+++ b/front/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app" ng-controller="homeCtrl as home">
+<html lang="en" ng-app="app" ng-controller="homeCtrl as vm">
     <head>
         <meta charset="UTF-8">
-        <title>{{ title }}</title>
+        <title>{{ vm.title }}</title>
     <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
     <!-- Main style sheet -->
@@ -38,7 +38,7 @@
                     <td><a href="#!">| Home |</a></td>
                 </tr>
                 <tr>
-                    <td><a href="#!login"> Login |</a></td>
+                    <td><a href="#!login"> Log In|</a></td>
                 </tr>
                 <tr>
                     <td><a href="#!about"> About |</a></td>
