--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,8 @@
     <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
     <!-- Main style sheet -->
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <!-- Font -->
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:500,300,700,400">
     <!-- JS files loading ------------------->
@@ -14,39 +15,48 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
     <!-- Modules -->
-        <script src="js/app.js"></script><!-- js/mainCtrl_old.js -->
+        <script src="js/app.js"></script>
     <!-- Controllers -->
-        <script src="js/controllers/homeCtrl.js"></script>
-        <script src="js/controllers/loginCtrl.js"></script>
-        <script src="js/controllers/aboutCtrl.js"></script>
-    <!-- Services -->
-        <script src="js/services/loginService.js"></script>
-    <!-- Factories -->
-        <script src="js/factories/loginFactory.js"></script>
-    <!-- Factories -->
+        <script src="js/homeCtrl.js"></script>
+    <!-- Module  Accounts-->
+        <script src="js/accounts/accountsCtrl.js"></script>
+        <script src="js/accounts/accountsService.js"></script>
+        <script src="js/accounts/accountsFactory.js"></script>
+    <!-- Config -->
         <script src="js/routeConfig.js"></script>
     </head>
     <body>
     <!-- Header -------------------------------------------------------------------------->
-        <header class="header">
-            <div>
-                <tr>
-                    <td><a href="#!" class=""><img src="img/organizer_logo.png" alt="Logo"></a></td>
-                </tr>
-                <!-- Main Menu Start -->
-                <tr>
-                    <td><a href="#!">| Home |</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#!login"> Log In|</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#!about"> About |</a></td>
-                </tr>
-                <!-- Main Menu End -->
-                <hr>
+    <header class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a href="#!" class="navbar-brand"><img src="img/organizer_logo.png" alt="Logo"></a>
             </div>
-        </header>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#!"> Home </a></li>
+                    <li><a href="#!login"> Log In</a></li>
+                    <li><a href="#!about"> About </a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="col-md-2">
+        <div class="list-group">
+            <a href="/" class="list-group-item active" align="center">Main menu</a>
+            <a href="/task/cat/list" class="list-group-item">Budget</a>
+            <a href="/diary" class="list-group-item">Contacts</a>
+            <a href="/budget/invoice/list" class="list-group-item">Diary</a>
+            <a href="/contacts/list" class="list-group-item">Password Organizer</a>
+            <a href="/password/list" class="list-group-item">Task</a>
+        </div>
+     </div>
     <!-- Body ---------------------------------------------------------------------------->
         <div class="main">
             <div class="container">
@@ -58,8 +68,8 @@
         </div>
     <!-- Footer ------------------------------------------------------------------------->
         <footer>
-            <div class="footer">
-                <div class="container">
+            <div class="">
+                <div class="">
                     <hr>
                     <img src="img/icon_team_150x150.png" alt="Logo">
                     <br>
