--- a/front/index.html
+++ b/front/index.html
@@ -1,92 +1,94 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app" ng-controller="homeCtrl as vm">
-    <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-        <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
-    <!-- bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!-- Font -->
-    <!-- JS files loading -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <!-- Modules -->
-        <script src="js/app.js"></script>
-    <!-- Controllers -->
-        <script src="js/homeCtrl.js"></script>
-    <!-- Config -->
-        <script src="js/routeConfig.js"></script>
-    <!-- Module  Accounts-->
-        <script src="js/accounts/accountsCtrl.js"></script>
-        <script src="js/accounts/accountsService.js"></script>
-        <script src="js/accounts/accountsFactory.js"></script>
-        <title>{{ vm.title }}</title>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+<!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
+<!-- bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+  integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<!-- Font -->
+<!-- JS files loading -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
+<!-- Modules -->
+    <script src="js/app.js"></script>
+<!-- Controllers -->
+    <script src="js/homeCtrl.js"></script>
+<!-- Config -->
+    <script src="js/routeConfig.js"></script>
+<!-- Module  Accounts-->
+    <script src="js/accounts/accountsCtrl.js"></script>
+    <script src="js/accounts/accountsService.js"></script>
+    <script src="js/accounts/accountsFactory.js"></script>
+    <title>{{ vm.title }}</title>
+</head>
+<body>
     <!-- Header -->
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="#!"><img src="img/organizer_logo_small.png" alt="Simple Organizer"></a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#!">Home</a></li>
-                    <li><a href="#!">test</a></li>
-                    <li><a href="#!about">About</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#!">Sing Up</a></li>
-                    <li class="active"><a href="#!login">Sing In</a></li>
-                </ul>
+    <div class="navbar navbar-default">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <img src="img/organizer_logo_small.png">
+        </div>
+        <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="#!">Home</a></li>
+            <li><a href="#!about">About</a></li>
+            <li><a href="#!contact">Contact</a></li>
+        </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#!profile">Hello, {{ username }}</a></li>
+                <li><a href="#!singup">Log Out</a></li>
+                <li><a href="#!singup">Sing Up</a></li>
+                <li><a href="#!singin">Sing In</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- Header End -->
+    <div class="row">
+        <!-- Left-side menu -->
+        <div class="col-md-2">
+            <div class="list-group">
+                <a class="list-group-item active" align="center"><span class="glyphicon glyphicon-cog"></span>
+                    Your services</a>
+                <a href="/budget" class="list-group-item"><span class="glyphicon glyphicon-usd"></span>
+                    Budget</a>
+                <a href="/contacts" class="list-group-item"><span class="glyphicon glyphicon-earphone"></span>
+                    Contacts</a>
+                <a href="/diary" class="list-group-item"><span class="glyphicon glyphicon-pencil"></span>
+                    Diary</a>
+                <a href="/password" class="list-group-item"><span class="glyphicon glyphicon-asterisk"></span>
+                    Password Organizer</a>
+                <a href="/task" class="list-group-item"><span class="glyphicon glyphicon-check"></span>
+                    Task</a>
             </div>
         </div>
-    </nav><!-- Header End -->
     <!-- Content -->
-    <div class="container theme-showcase" role="main">
-        <div class="row">
-        <!-- Left-side menu -->
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item active" align="center"><span class="glyphicon glyphicon-cog"></span>
-                        Your services</a>
-                    <a href="/budget" class="list-group-item"><span class="glyphicon glyphicon-usd"></span>
-                        Budget</a>
-                    <a href="/contacts" class="list-group-item"><span class="glyphicon glyphicon-earphone"></span>
-                        Contacts</a>
-                    <a href="/diary" class="list-group-item"><span class="glyphicon glyphicon-pencil"></span>
-                        Diary</a>
-                    <a href="/password" class="list-group-item"><span class="glyphicon glyphicon-asterisk"></span>
-                        Password Organizer</a>
-                    <a href="/task" class="list-group-item"><span class="glyphicon glyphicon-check"></span>
-                        Task</a>
-                </div>
-            </div>
-        <!-- Body -->
-            <div class="col-md-9">
-                <h2 align="center">{{ brand }}</h2>
-        <!-- ng-view -->
-                <div class="ng-view"></div>
-            </div>
+        <div class="col-md-10">
+    <!-- ng-view -->
+            <div class="ng-view"></div>
         </div>
     </div>
     <!-- End Content -->
     <!-- Footer -->
-        <footer class="well">
-            <div class="row">
-                <div class="col-md-4 text-center" >
-                    <img src="img/icon_team_50x50.png" alt="Logo"><br>
-                    <h6><b>{{ team | uppercase }} &copy {{ today | date:'yyyy'}}</b></h6>
-                </div>
-                <div class="col-md-4 col-md-offset-4 text-center">
-                    <h6><b>Powered by</b><i> Oleksandr K. and Pasha M.</i></h6>
-                </div>
-            </div>
-        </footer>
-    </body>
+    <div class="row well">
+        <div class="col-md-12 text-center" >
+            <img src="img/icon_team_50x50.png" alt="Logo"><br>
+            <h6><b>{{ team | uppercase }} &copy {{ today | date:'yyyy'}}</b></h6><br>
+            <h6>{{ brand }}</h6><br>
+            <h6><b>Powered by</b><i> Oleksandr K. and <a href="https://github.com/m-pasha" class="navbar-link">
+                Pasha M.</a></i></h6><br>
+        </div>
+    </div>
+    <!-- End Footer -->
+</body>
 </html>
