--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,7 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/sticky-footer.css">
-    <script src="js/jQuery/jquery-3.3.1.min.js"></script>
+    <!--<script src="js/jQuery/jquery-3.3.1.min.js"></script>-->
     <script src="js/angularJs/angular.min.js"></script>
     <script src="js/angularJs/angular-route.min.js"></script>
     <script src="js/angularJs/ngStorage.min.js"></script>
@@ -45,8 +45,8 @@
                 <li><a href="#!profile" ng-click="userProfile()" ng-if="status_user()">Hello, {{ username() }}</a></li>
                 <li><a href="" ng-click="logOut()" ng-if="status_user()">Log Out
                 <span class="glyphicon glyphicon-off"></span></a></li>
-                <li><a href="#!sing-up" ng-hide="status_user()">Sing Up</a></li>
-                <li><a href="#!sing-in" ng-hide="status_user()">Sing In</a></li>
+                <li><a href="#!sing-up" ng-hide="status_user()">Sign Up</a></li>
+                <li><a href="#!sing-in" ng-hide="status_user()">Sign In</a></li>
             </ul>
         </div>
     </div>
@@ -65,6 +65,7 @@
       </div>
     <!-- Content -->
         <div class="col-md-10">
+            <div ng-hide="status_user()"><h5 class="alert alert-warning">Hello! Please SignIn or SignUp</h5></div>
     <!-- ng-view -->
             <div class="ng-view"></div>
         </div>
