--- a/front/index.html
+++ b/front/index.html
@@ -1,106 +1,109 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app" ng-controller="accountsCtrl as vm">
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/sticky-footer.css">
-    <!--<script src="js/jQuery/jquery-3.3.1.min.js"></script>-->
-    <script src="js/angularJs/angular.min.js"></script>
-    <script src="js/angularJs/angular-route.min.js"></script>
-    <script src="js/angularJs/ngStorage.min.js"></script>
-    <script src="js/angularJs/ui-bootstrap.min.js"></script>
-<!-- Modules -->
-    <script src="js/app.js"></script>
-<!-- Config -->
-    <script src="js/routeConfig.js"></script>
-<!-- Modules -->
-    <script src="js/accounts/accountsCtrl.js"></script>
-    <script src="js/accounts/accountsService.js"></script>
-    <script src="js/accounts/accountsFactory.js"></script>
-<!-- Title -->
-    <title>{{ vm.title }}</title>
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/icon_team_16x16.png">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/sticky-footer.css">
+  <!--<script src="js/jQuery/jquery-3.3.1.min.js"></script>-->
+  <script src="js/angularJs/angular.min.js"></script>
+  <script src="js/angularJs/angular-route.min.js"></script>
+  <script src="js/angularJs/ngStorage.min.js"></script>
+  <script src="js/angularJs/ui-bootstrap.min.js"></script>
+  <!-- Modules -->
+  <script src="js/app.js"></script>
+  <!-- Config -->
+  <script src="js/routeConfig.js"></script>
+  <!-- Modules -->
+  <script src="js/accounts/accountsCtrl.js"></script>
+  <script src="js/accounts/accountsService.js"></script>
+  <script src="js/accounts/accountsFactory.js"></script>
+  <title>{{ vm.title }}</title>
 </head>
 <body>
   <div class="container-fluid">
     <!-- Header -->
     <div class="navbar navbar-default">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="img/organizer_logo_small.png">
-        </div>
-        <div class="navbar-collapse collapse">
+        <img src="img/organizer_logo_small.png">
+      </div>
+      <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#!">Home</a></li>
-            <li><a href="#!about">About</a></li>
+          <li><a href="#!">Home</a></li>
+          <li><a href="#!about">About</a></li>
         </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#!profile" ng-click="userProfile()" ng-if="status_user()">Hello, {{ username() }}</a></li>
-                <li><a href="" ng-click="logOut()" ng-if="status_user()">Log Out
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#!profile" ng-click="userProfile()" ng-if="status_user()">Hello, {{ username() }}</a></li>
+          <li><a href="" ng-click="logOut()" ng-if="status_user()">Log Out
                 <span class="glyphicon glyphicon-off"></span></a></li>
-                <li><a href="#!sing-up" ng-hide="status_user()">Sign Up</a></li>
-                <li><a href="#!sing-in" ng-hide="status_user()">Sign In</a></li>
-            </ul>
-        </div>
+          <li><a href="#!sing-up" ng-hide="status_user()">Sign Up</a></li>
+          <li><a href="#!sing-in" ng-hide="status_user()">Sign In</a></li>
+        </ul>
+      </div>
     </div>
     <!-- Header End -->
     <div class="row">
-    <!-- Left-side menu -->
+      <!-- Left-side menu -->
       <div class="col-md-2" ng-if="status_user()">
         <div class="list-group">
           <a class="list-group-item active text-center"><span class="glyphicon glyphicon-cog"></span> Your services</a>
-            <a href="#!budget" class="list-group-item"><span class="glyphicon glyphicon-usd"></span> Budget</a>
-            <a href="#!contacts" class="list-group-item"><span class="glyphicon glyphicon-earphone"></span> Contacts</a>
-            <a href="#!diary" class="list-group-item"><span class="glyphicon glyphicon-pencil"></span> Diary</a>
-            <a href="#!password" class="list-group-item"><span class="glyphicon glyphicon-asterisk"></span> Password</a>
-            <a href="#!task/short" class="list-group-item"><span class="glyphicon glyphicon-check"></span> Task</a>
+          <a href="#!budget" class="list-group-item"><span class="glyphicon glyphicon-usd"></span> Budget</a>
+          <a href="#!contacts" class="list-group-item"><span class="glyphicon glyphicon-earphone"></span> Contacts</a>
+          <a href="#!diary" class="list-group-item"><span class="glyphicon glyphicon-pencil"></span> Diary</a>
+          <a href="#!password" class="list-group-item"><span class="glyphicon glyphicon-asterisk"></span> Password</a>
+          <a href="#!task/short" class="list-group-item"><span class="glyphicon glyphicon-check"></span> Task</a>
         </div>
       </div>
-    <!-- Content -->
-        <div class="col-md-12" ng-hide="status_user()"><h5 class="alert alert-warning">Hello! Please SignIn or SignUp</h5></div>
-        <div class="col-md-10">
-    <!-- ng-view -->
-            <div class="ng-view"></div>
-        </div>
+      <!-- Content -->
+      <div class="col-md-12" ng-hide="status_user()">
+        <h5 class="alert alert-warning">Hello! Please SignIn or SignUp</h5>
+      </div>
+      <div class="col-md-10">
+        <!-- ng-view -->
+        <div class="ng-view"></div>
+      </div>
     </div>
-      <hr>
+    <hr>
     <!-- End Content -->
     <!-- Footer -->
     <div class="row well" id="footer">
-        <div class="col-md-12 text-center" >
-            <img src="img/icon_team_50x50.png" alt="Logo"><br>
-            <h6><b>{{ brand | uppercase }} &copy {{ today | date:'yyyy'}}</b></h6><br>
-            <div class="col-md-2 col-md-offset-10"><h6>version: <i>{{ version }}</i></h6></div>
-            <h6><b>Powered by </b><i>{{ team | uppercase}}</i></h6><br>
+      <div class="col-md-12 text-center">
+        <img src="img/icon_team_50x50.png" alt="Logo"><br>
+        <h6><b>{{ brand | uppercase }} &copy {{ today | date:'yyyy'}}</b></h6><br>
+        <div class="col-md-2 col-md-offset-10">
+          <h6>version: <i>{{ version }}</i></h6>
         </div>
+        <h6><b>Powered by </b><i>{{ team | uppercase}}</i></h6><br>
+      </div>
     </div>
     <!-- End Footer -->
   </div>
-<!-- Modules -->
-    <script src="js/contacts/contactsCtrl.js"></script>
-    <script src="js/contacts/contactsService.js"></script>
-    <script src="js/contacts/contactsFactory.js"></script>
-    <script src="js/contacts/contactsFilter.js"></script>
-    <script src="js/diary/diaryCtrl.js"></script>
-    <script src="js/diary/diaryService.js"></script>
-    <script src="js/diary/diaryFactory.js"></script>
-    <script src="js/password/passwordCtrl.js"></script>
-    <script src="js/password/passwordService.js"></script>
-    <script src="js/password/passwordFactory.js"></script>
-    <script src="js/task/taskCtrl.js"></script>
-    <script src="js/task/taskService.js"></script>
-    <script src="js/task/taskFactory.js"></script>
-    <script src="js/task/taskFilter.js"></script>
-    <script src="js/budget/budgetCtrl.js"></script>
-    <script src="js/budget/budgetService.js"></script>
-    <script src="js/budget/budgetFactory.js"></script>
-    <script src="js/budget/budgetFilter.js"></script>
+  <!-- Modules -->
+  <script src="js/contacts/contactsCtrl.js"></script>
+  <script src="js/contacts/contactsService.js"></script>
+  <script src="js/contacts/contactsFactory.js"></script>
+  <script src="js/contacts/contactsFilter.js"></script>
+  <script src="js/diary/diaryCtrl.js"></script>
+  <script src="js/diary/diaryService.js"></script>
+  <script src="js/diary/diaryFactory.js"></script>
+  <script src="js/password/passwordCtrl.js"></script>
+  <script src="js/password/passwordService.js"></script>
+  <script src="js/password/passwordFactory.js"></script>
+  <script src="js/task/taskCtrl.js"></script>
+  <script src="js/task/taskService.js"></script>
+  <script src="js/task/taskFactory.js"></script>
+  <script src="js/task/taskFilter.js"></script>
+  <script src="js/budget/budgetCtrl.js"></script>
+  <script src="js/budget/budgetService.js"></script>
+  <script src="js/budget/budgetFactory.js"></script>
+  <script src="js/budget/budgetFilter.js"></script>
 </body>
 </html>
