Updated template index.html

--- a/front/index.html
+++ b/front/index.html
@@ -42,7 +42,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#!profile" ng-click="userProfile()" ng-if="userEmail()">Hello, {{ userEmail() }}</a></li>
-          <li><a href="" ng-click="logOut()" ng-show="userEmail()">Log Out
+          <li><a href="" ng-click="logOut()" ng-show="userEmail()">Sign Out
                 <span class="glyphicon glyphicon-off"></span></a></li>
           <li><a href="#!sing-up" ng-hide="userEmail()">Sign Up</a></li>
           <li><a href="#!sing-in" ng-hide="userEmail()">Sign In</a></li>
